# ChatGPT-Tinder-Bot

./: .gitignore  Dockerfile  README.en.md  README.md  config.py  local-dev-env.md  local_requirements.txt  main.py  pyproject.toml  requirements.txt  wall.py  whitelist.txt
WALL/: play_pytz.py  play_time_delta.py  wall_0.py
debug/: ask_hook_up.ipynb  debug_line_notify.py  find_girl_reply_about_hook_up.ipynb  get_remaining_likes.ipynb  meta.json  meta_v2.json  test_import.py
doc/: begining_greet.md
local_settings/: local.env
openai_sandbox/: view_availabel_models.py  view_openai_api.py
pyChatGPT_sandbox/: play.ipynb  test.py
src/: dialog.py  tinder.py
src/LLM/: ChatGPTAPI.py  pyChatGPT.py
src/tinder/: __init__.py  chatroom.py  match.py  message.py  person.py  profile.py  rec_person.py  tinder_api.py
src/ult/: __init__.py  file_tool.py  whitelist.py
src/utils/: __init__.py  file_tool.py  hash.py
templates/: girls.html  recs.html
tests/: test_models.py
tinder_bot/: chatgpt.py
tinder_bot/LLM/: __init__.py  shortcut.py
tinder_bot/line/: __init__.py  line_notify.py
tinder_bot/tinder/: __init__.py  chatroom.py  (+7 more)
tinder_sandbox/: build_has_replied_hk.py  build_person.py  check_tinder_api.py  failed_to_login_tinder_notify.py  find_all_sexual_orientations.py  find_informative_user.py  gen_inference_input.py  like_girls_script.py  like_response.json  meta.json  meta_v1.json  msg.json  person.json  recs.json  recs_v1.json  test_recommend.ipynb  user_64301fa0646eb40100d452e8.json  view_matches.py  view_recs.py  view_tinder_api.ipynb  view_tinder_api.py
(+24 files in other folders)
