[tool.poetry]
name = "chatgpt-tinder-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.27.2"
uvicorn = "^0.21.1"
APScheduler = "^3.10.1"
fastapi = "^0.95.0"
OpenCC = "^1.1.6"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
